--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -2,6 +2,11 @@ html {
   box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 *,
 *::before,
 *::after {
@@ -20,6 +25,18 @@ body {
   color: $grey;
   font-family: 'Quicksand', sans-serif;
   font-weight: 400;
+}
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+}
+.content {
+	flex: 1 0 auto;
+}
+.footer {
+	flex: 0 0 auto;
 }
 
 .container {
